Opened 11 years ago
Closed 11 years ago
#10102 closed bug (fixed)
[package_daemon] crashes in strcmp
Reported by: | diver | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/package_daemon | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev46233 gcc2 hybrid.
I was trying to move some packages from or to ~/config/packages folder when package_daemon crashed.
Attachments (3)
Change History (11)
by , 11 years ago
Attachment: | package_daemon-189-debug-15-10-2013-10-21-15.report added |
---|
by , 11 years ago
by , 11 years ago
Attachment: | package_daemon-683-debug-15-10-2013-10-25-58.report added |
---|
comment:1 by , 11 years ago
Summary: | [package_daemon] crash in BString::__eq → [package_daemon] crashes in BString::__eq |
---|
comment:2 by , 11 years ago
Component: | - General → Servers/package_daemon |
---|---|
Owner: | changed from | to
Summary: | [package_daemon] crashes in BString::__eq → [package_daemon] crashes in strcmp |
comment:3 by , 11 years ago
I've tried and tried, but cannot reproduce this crash with the distcc package. The debug report suggests that the crash happens when looking up the removed file in the Volume::fPackagesByFileName
hash table, so apparently the has table has been corrupted. The most likely cause -- an item being deleted without removing it from the table -- is something I don't see happening either (with added debug output).
What is the exact sequence of steps you perform to reproduce the crash?
comment:4 by , 11 years ago
pkgman install --home distcc mv ~/config/packages/administrative/transaction-1/* ~/config/packages # Press Ok in package_daemon error window. mv ~/config/packages/distcc* .
comment:5 by , 11 years ago
Can't reproduce the issue with these steps either. :-/ Tested in qemu with a gcc2h build.
comment:6 by , 11 years ago
Ok, it seems that we need more than one package to be downloaded first. Reproducible in current nightly using:
pkgman uninstall python pkgman install --home distcc mv ~/config/packages/administrative/transaction-1/* ~/config/packages # Press Ok in package_daemon error window. mv ~/config/packages/distcc* .
comment:7 by , 11 years ago
Status: | new → in-progress |
---|
Moving distcc-3.1-2-x86_gcc2.hpkg out reproduces it.