package daemon: Fix error handling of manually added packages

Since we don't move those packages out of the "packages" directory, we
don't want to remove their respective object from the hash tables
either. Fixes #10102.